--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["Tobias Bucher <tobiasbucher5991@gmail.com>"]
 name = "dirs"
-version = "0.1.0"
+version = "0.2.0"
 
 description = "A library for querying operating system specific directories"
 repository = "https://github.com/tbu-/dirs"
@@ -9,7 +9,7 @@ license = "MIT/Apache-2.0"
 
 [[bin]]
 doc = false
-name = "foobar"
+name = "dirs"
 
 [dependencies]
 ole32-sys = "0.2.0"
