--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ license = "MIT/Apache-2.0"
 doc = false
 name = "dirs"
 
-[dependencies.'cfg(windows)'.target]
+[target.'cfg(windows)'.dependencies]
 ole32-sys = "0.2.0"
 shell32-sys = "0.1.1"
 winapi = "0.2.5"
