--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,10 @@ license = "MIT/Apache-2.0"
 doc = false
 name = "dirs"
 
-[target.'cfg(windows)'.dependencies]
-ole32-sys = "0.2.0"
-shell32-sys = "0.1.1"
-winapi = "0.2.5"
+[target.'cfg(windows)'.dependencies.winapi]
+version = "0.3.2"
+features = [
+    "combaseapi",
+    "shlobj",
+    "winerror",
+]
